Bug 483818 - KDE Desktop crashing when playing Video in Spotify
Summary: KDE Desktop crashing when playing Video in Spotify
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Media Player widget (other bugs)
Version First Reported In: 6.0.2
Platform: Arch Linux Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 483878 484010 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-17 10:33 UTC by ian.rehwinkel
Modified: 2024-03-21 16:20 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.3
Sentry Crash Report:


Attachments
Crash log from journalctl (191.29 KB, text/plain)
2024-03-17 10:33 UTC, ian.rehwinkel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ian.rehwinkel 2024-03-17 10:33:45 UTC
Created attachment 167363 [details]
Crash log from journalctl

SUMMARY
Spotify video player apparently causes KDE to crash. This problem is recent and hasn't been present on Plasma version 5.


STEPS TO REPRODUCE
1. Use KDE Desktop
2. Use Spotify (from the spotify-launcher package on arch linux) and play a music video

OBSERVED RESULT
Desktop wallpaper disappears, so does the desktop menu. A crash can be observed in journalctl.

EXPECTED RESULT
No Crash

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux, Package version 6.0.2-3
(available in About System)
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 
- plasma-framework5 5.115.0-3 (kf5)
- frameworkintegration 6.0.0-1 (kf6)
- frameworkintegration5 5.115.0-1 (kf5)
Qt Version: 6.6.2
Comment 1 Nicolas Fella 2024-03-17 13:50:52 UTC
#0  0x000070a141b84223 _ZN14QObjectPrivate11connectImplEPK7QObjectiS2_PPvPN9QtPrivate15QSlotObjectBaseEiPKiPK11QMetaObject (libQt6Core.so.6 + 0x184223)
#1  0x000070a141b8460b _ZN7QObject11connectImplEPKS_PPvS1_S3_PN9QtPrivate15QSlotObjectBaseEN2Qt14ConnectionTypeEPKiPK11QMetaObject (libQt6Core.so.6 + 0x18460b)
#2  0x000070a108c8b2a5 _ZN15PlayerContainer18onGetPropsFinishedEP23QDBusPendingCallWatcher (libkmpris.so.6 + 0x2e2a5)
#3  0x000070a141b90ca9 n/a (libQt6Core.so.6 + 0x190ca9)
#4  0x000070a142900e80 n/a (libQt6DBus.so.6 + 0x71e80)
#5  0x000070a141b7c2c7 _ZN7QObject5eventEP6QEvent (libQt6Core.so.6 + 0x17c2c7)
#6  0x000070a1438f438b _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf438b)
#7  0x000070a141b39818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#8  0x000070a141b39b9b _ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData (libQt6Core.so.6 + 0x139b9b)
#9  0x000070a141d758a4 n/a (libQt6Core.so.6 + 0x3758a4)
#10 0x000070a14070af69 n/a (libglib-2.0.so.0 + 0x59f69)
#11 0x000070a1407693a7 n/a (libglib-2.0.so.0 + 0xb83a7)
#12 0x000070a140709162 g_main_context_iteration (libglib-2.0.so.0 + 0x58162)
#13 0x000070a141d739c4 _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt6Core.so.6 + 0x3739c4)
#14 0x000070a141b43d6e _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt6Core.so.6 + 0x143d6e)
#15 0x000070a141b3c2b8 _ZN16QCoreApplication4execEv (libQt6Core.so.6 + 0x13c2b8)
#16 0x00005fe3f301f476 n/a (plasmashell + 0x27476)
#17 0x000070a141443cd0 n/a (libc.so.6 + 0x25cd0)
#18 0x000070a141443d8a __libc_start_main (libc.so.6 + 0x25d8a)
#19 0x00005fe3f301fc65 n/a (plasmashell + 0x27c65)
Comment 2 Fushan Wen 2024-03-17 14:35:01 UTC
Please provide a full backtrace from coredumpctl gdb
Comment 3 ian.rehwinkel 2024-03-17 15:03:55 UTC
This is from kded6. It seems to be the same as Nicolas Fella posted. The other threads seem to be waiting on some condition variables and likely have no interesting backtrace:

(gdb) bt
#0  0x000070732a6ab32c in ??? () at /usr/lib/libc.so.6
#1  0x000070732a65a6c8 in raise () at /usr/lib/libc.so.6
#2  0x000070732c51143f in KCrash::defaultCrashHandler(int) () at /usr/lib/libKF6Crash.so.6
#3  0x000070732a65a770 in <signal handler called> () at /usr/lib/libc.so.6
#4  0x000070732ad84223 in QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void**, QtPrivate::QSlotObjectBase*, int, int const*, QMetaObject const*) ()
    at /usr/lib/libQt6Core.so.6
#5  0x000070732ad8460b in QObject::connectImpl(QObject const*, void**, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) ()
    at /usr/lib/libQt6Core.so.6
#6  0x0000707317ea12a5 in PlayerContainer::onGetPropsFinished(QDBusPendingCallWatcher*) () at /usr/lib/libkmpris.so.6
#7  0x000070732ad90ca9 in ??? () at /usr/lib/libQt6Core.so.6
#8  0x000070732bc25e80 in ??? () at /usr/lib/libQt6DBus.so.6
#9  0x000070732ad7c2c7 in QObject::event(QEvent*) () at /usr/lib/libQt6Core.so.6
#10 0x000070732bef438b in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt6Widgets.so.6
#11 0x000070732ad39818 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt6Core.so.6
#12 0x000070732ad39b9b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt6Core.so.6
#13 0x000070732af758a4 in ??? () at /usr/lib/libQt6Core.so.6
#14 0x000070732a48af69 in ??? () at /usr/lib/libglib-2.0.so.0
#15 0x000070732a4e93a7 in ??? () at /usr/lib/libglib-2.0.so.0
#16 0x000070732a489162 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#17 0x000070732af739c4 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt6Core.so.6
#18 0x000070732ad43d6e in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt6Core.so.6
#19 0x000070732ad3c2b8 in QCoreApplication::exec() () at /usr/lib/libQt6Core.so.6
#20 0x0000558c2290fb66 in ??? ()
#21 0x000070732a643cd0 in ??? () at /usr/lib/libc.so.6
#22 0x000070732a643d8a in __libc_start_main () at /usr/lib/libc.so.6
#23 0x0000558c2290fed5 in ??? ()
Comment 4 ian.rehwinkel 2024-03-17 15:10:31 UTC
As for the plasmashell crash, this is the backtrace with all debug info:

(gdb) bt
#0  0x000075a300d84223 in std::__atomic_base<QThreadData*>::load (__m=std::memory_order_acquire, this=0xe305b0808ad94858) at /usr/include/c++/13.2.1/atomic:576
#1  std::atomic<QThreadData*>::load (__m=std::memory_order_acquire, this=0xe305b0808ad94858) at /usr/include/c++/13.2.1/atomic:577
#2  QAtomicOps<QThreadData*>::loadAcquire<QThreadData*> (_q_value=<error reading variable: Cannot access memory at address 0xe305b0808ad94858>, _q_value=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/thread/qatomic_cxx11.h:213
#3  QBasicAtomicPointer<QThreadData>::loadAcquire (this=0xe305b0808ad94858, this=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/thread/qbasicatomic.h:179
#4  QObjectPrivate::connectImpl
    (sender=sender@entry=0x6159c9f276d0, signal_index=3, receiver=receiver@entry=0x6159c9a8bc10, slot=slot@entry=0x7ffc087d4170, slotObjRaw=slotObjRaw@entry=0x6159c9a999e0, type=<optimized out>, types=0x0, senderMetaObject=0x75a2bc7fcb00 <OrgFreedesktopDBusPropertiesInterface::staticMetaObject>)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobject.cpp:5180
#5  0x000075a300d8460b in QObject::connectImpl
    (sender=sender@entry=0x6159c9f276d0, signal=signal@entry=0x7ffc087d41b0, receiver=receiver@entry=0x6159c9a8bc10, slot=slot@entry=0x7ffc087d4170, slotObjRaw=0x6159c9a999e0, type=Qt::AutoConnection, types=0x0, senderMetaObject=<optimized out>) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobject.cpp:5111
#6  0x000075a2bc7e62a5 in QObject::connect<void (OrgFreedesktopDBusPropertiesInterface::*)(QString const&, QMap<QString, QVariant> const&, QList<QString> const&), void (PlayerContainer::*)(QString const&, QMap<QString, QVariant> const&, QList<QString> const&)>
    (type=Qt::AutoConnection, slot=@0x7ffc087d4170: (void (PlayerContainer::*)(PlayerContainer * const, const QString &, const QMap<QString, QVariant> &, const QList<QString> &)) 0x75a2bc7e64f0 <PlayerContainer::onPropertiesChanged(QString const&, QMap<QString, QVariant> const&, QList<QString> const&)>, context=0x6159c9a8bc10, signal=(void (OrgFreedesktopDBusPropertiesInterface::*)(OrgFreedesktopDBusPropertiesInterface * const, const QString &, const QMap<QString, QVariant> &, const QList<QString> &)) 0x75a2bc7e7c00 <OrgFreedesktopDBusPropertiesInterface::PropertiesChanged(QString const&, QMap<QString, QVariant> const&, QList<QString> const&)>, sender=0x6159c9f276d0) at /usr/include/qt6/QtCore/qobject.h:240
#7  PlayerContainer::onGetPropsFinished (this=0x6159c9a8bc10, watcher=<optimized out>) at /usr/src/debug/plasma-workspace/plasma-workspace-6.0.2/libkmpris/playercontainer.cpp:704
#8  0x000075a300d90ca9 in QtPrivate::QSlotObjectBase::call (a=0x7ffc087d4350, r=0x6159c9a8bc10, this=0x6159c9a87030, this=<optimized out>, r=<optimized out>, a=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobjectdefs_impl.h:433
#9  doActivate<false> (sender=0x6159c9aacd60, signal_index=3, argv=0x7ffc087d4350) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobject.cpp:4039
#10 0x000075a301b00e80 in QDBusPendingCallWatcher::finished (_t1=<optimized out>, this=<optimized out>)
    at /usr/src/debug/qt6-base/build/src/dbus/DBus_autogen/include/moc_qdbuspendingcall.cpp:200
#11 QDBusPendingCallWatcherPrivate::_q_finished (this=<optimized out>) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/dbus/qdbuspendingcall.cpp:460
#12 QDBusPendingCallWatcher::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>)
    at /usr/src/debug/qt6-base/build/src/dbus/DBus_autogen/include/moc_qdbuspendingcall.cpp:138
#13 0x000075a300d7c2c7 in QObject::event (this=0x6159c9aacd60, e=0x75a2f4061120) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobject.cpp:1437
#14 0x000075a302af438b in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x6159c9aacd60, e=0x75a2f4061120)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/widgets/kernel/qapplication.cpp:3296
#15 0x000075a300d39818 in QCoreApplication::notifyInternal2 (receiver=0x6159c9aacd60, event=event@entry=0x75a2f4061120)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qcoreapplication.cpp:1121
#16 0x000075a300d39b9b in QCoreApplication::sendEvent (event=0x75a2f4061120, receiver=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qcoreapplication.cpp:1539
#17 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x6159c7647ba0)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qcoreapplication.cpp:1901
#18 0x000075a300f758a4 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qcoreapplication.cpp:1760
#19 postEventSourceDispatch (s=0x6159c7675970) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qeventdispatcher_glib.cpp:243
#20 0x000075a2ff912f69 in g_main_dispatch (context=0x75a2f4000ef0) at ../glib/glib/gmain.c:3476
#21 0x000075a2ff9713a7 in g_main_context_dispatch_unlocked (context=0x75a2f4000ef0) at ../glib/glib/gmain.c:4284
#22 g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x75a2f4000ef0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4349
#23 0x000075a2ff911162 in g_main_context_iteration (context=0x75a2f4000ef0, may_block=1) at ../glib/glib/gmain.c:4414
#24 0x000075a300f739c4 in QEventDispatcherGlib::processEvents (this=0x6159c768b560, flags=...)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qeventdispatcher_glib.cpp:393
#25 0x000075a300d43d6e in QEventLoop::processEvents (flags=..., this=0x7ffc087d47d0) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qeventloop.cpp:100
#26 QEventLoop::exec (this=0x7ffc087d47d0, flags=...) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qeventloop.cpp:182
#27 0x000075a300d3c2b8 in QCoreApplication::exec () at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/global/qflags.h:74
#28 0x000075a302af0f0a in QApplication::exec () at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/widgets/kernel/qapplication.cpp:2574
#29 0x00006159c5d9b476 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/plasma-workspace/plasma-workspace-6.0.2/shell/main.cpp:214
Comment 5 ian.rehwinkel 2024-03-17 15:12:28 UTC
Here is the full backtrace for kded!

(gdb) bt
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x000070732a6ab393 in __pthread_kill_internal (signo=11, threadid=<optimized out>) at pthread_kill.c:78
#2  0x000070732a65a6c8 in __GI_raise (sig=11) at ../sysdeps/posix/raise.c:26
#3  0x000070732c51143f in KCrash::defaultCrashHandler (sig=11) at /usr/src/debug/kcrash/kcrash-6.0.0/src/kcrash.cpp:586
#4  0x000070732a65a770 in <signal handler called> () at /usr/lib/libc.so.6
#5  0x000070732ad84223 in std::__atomic_base<QThreadData*>::load (__m=std::memory_order_acquire, this=0x82f8541fb60d7f33) at /usr/include/c++/13.2.1/atomic:576
#6  std::atomic<QThreadData*>::load (__m=std::memory_order_acquire, this=0x82f8541fb60d7f33) at /usr/include/c++/13.2.1/atomic:577
#7  QAtomicOps<QThreadData*>::loadAcquire<QThreadData*> (_q_value=<error reading variable: Cannot access memory at address 0x82f8541fb60d7f33>, _q_value=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/thread/qatomic_cxx11.h:213
#8  QBasicAtomicPointer<QThreadData>::loadAcquire (this=0x82f8541fb60d7f33, this=<optimized out>) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/thread/qbasicatomic.h:179
#9  QObjectPrivate::connectImpl
    (sender=sender@entry=0x558c2462e0b0, signal_index=3, receiver=receiver@entry=0x558c244210e0, slot=slot@entry=0x7fffe6c9d9d0, slotObjRaw=slotObjRaw@entry=0x558c2466d590, type=<optimized out>, types=0x0, senderMetaObject=0x707317eb7b00 <OrgFreedesktopDBusPropertiesInterface::staticMetaObject>) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobject.cpp:5180
#10 0x000070732ad8460b in QObject::connectImpl
    (sender=sender@entry=0x558c2462e0b0, signal=signal@entry=0x7fffe6c9da10, receiver=receiver@entry=0x558c244210e0, slot=slot@entry=0x7fffe6c9d9d0, slotObjRaw=0x558c2466d590, type=Qt::AutoConnection, types=0x0, senderMetaObject=<optimized out>) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobject.cpp:5111
#11 0x0000707317ea12a5 in QObject::connect<void (OrgFreedesktopDBusPropertiesInterface::*)(QString const&, QMap<QString, QVariant> const&, QList<QString> const&), void (PlayerContainer::*)(QString const&, QMap<QString, QVariant> const&, QList<QString> const&)>
    (type=Qt::AutoConnection, slot=@0x7fffe6c9d9d0: (void (PlayerContainer::*)(PlayerContainer * const, const QString &, const QMap<QString, QVariant> &, const QList<QString> &)) 0x707317ea14f0 <PlayerContainer::onPropertiesChanged(QString const&, QMap<QString, QVariant> const&, QList<QString> const&)>, context=0x558c244210e0, signal=(void (OrgFreedesktopDBusPropertiesInterface::*)(OrgFreedesktopDBusPropertiesInterface * const, const QString &, const QMap<QString, QVariant> &, const QList<QString> &)) 0x707317ea2c00 <OrgFreedesktopDBusPropertiesInterface::PropertiesChanged(QString const&, QMap<QString, QVariant> const&, QList<QString> const&)>, sender=0x558c2462e0b0) at /usr/include/qt6/QtCore/qobject.h:240
#12 PlayerContainer::onGetPropsFinished (this=0x558c244210e0, watcher=<optimized out>) at /usr/src/debug/plasma-workspace/plasma-workspace-6.0.2/libkmpris/playercontainer.cpp:704
#13 0x000070732ad90ca9 in QtPrivate::QSlotObjectBase::call (a=0x7fffe6c9dbb0, r=0x558c244210e0, this=0x558c2466dd60, this=<optimized out>, r=<optimized out>, a=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobjectdefs_impl.h:433
#14 doActivate<false> (sender=0x558c245b58a0, signal_index=3, argv=0x7fffe6c9dbb0) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobject.cpp:4039
#15 0x000070732bc25e80 in QDBusPendingCallWatcher::finished (_t1=<optimized out>, this=<optimized out>) at /usr/src/debug/qt6-base/build/src/dbus/DBus_autogen/include/moc_qdbuspendingcall.cpp:200
#16 QDBusPendingCallWatcherPrivate::_q_finished (this=<optimized out>) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/dbus/qdbuspendingcall.cpp:460
#17 QDBusPendingCallWatcher::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/qt6-base/build/src/dbus/DBus_autogen/include/moc_qdbuspendingcall.cpp:138
#18 0x000070732ad7c2c7 in QObject::event (this=0x558c245b58a0, e=0x558c2474cc50) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qobject.cpp:1437
c#19 0x000070732bef438b in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x558c245b58a0, e=0x558c2474cc50) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/widgets/kernel/qapplication.cpp:3296
#20 0x000070732ad39818 in QCoreApplication::notifyInternal2 (receiver=0x558c245b58a0, event=event@entry=0x558c2474cc50) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qcoreapplication.cpp:1121
#21 0x000070732ad39b9b in QCoreApplication::sendEvent (event=0x558c2474cc50, receiver=<optimized out>) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qcoreapplication.cpp:1539
#22 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x558c2413e400) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qcoreapplication.cpp:1901
#23 0x000070732af758a4 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qcoreapplication.cpp:1760
#24 postEventSourceDispatch (s=0x558c24140ff0) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qeventdispatcher_glib.cpp:243
#25 0x000070732a48af69 in g_main_dispatch (context=0x707320000ef0) at ../glib/glib/gmain.c:3476
#26 0x000070732a4e93a7 in g_main_context_dispatch_unlocked (context=0x707320000ef0) at ../glib/glib/gmain.c:4284
#27 g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x707320000ef0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4349
#28 0x000070732a489162 in g_main_context_iteration (context=0x707320000ef0, may_block=1) at ../glib/glib/gmain.c:4414
#29 0x000070732af739c4 in QEventDispatcherGlib::processEvents (this=0x558c2415eee0, flags=...) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qeventdispatcher_glib.cpp:393
#30 0x000070732ad43d6e in QEventLoop::processEvents (flags=..., this=0x7fffe6c9e030) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qeventloop.cpp:100
#31 QEventLoop::exec (this=0x7fffe6c9e030, flags=...) at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/kernel/qeventloop.cpp:182
#32 0x000070732ad3c2b8 in QCoreApplication::exec () at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/corelib/global/qflags.h:74
#33 0x000070732bef0f0a in QApplication::exec () at /usr/src/debug/qt6-base/qtbase-everywhere-src-6.6.2/src/widgets/kernel/qapplication.cpp:2574
#34 0x0000558c2290fb66 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kded/kded-6.0.0/src/kded.cpp:675
Comment 6 Bug Janitor Service 2024-03-17 15:30:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4088
Comment 7 Fushan Wen 2024-03-17 15:48:33 UTC
Git commit 74e5f349edab7a9dcf5c868fa521293a95bc6c82 by Fushan Wen.
Committed on 17/03/2024 at 15:34.
Pushed by fusionfuture into branch 'master'.

libkmpris: check identity before emitting initialFetchFinished

When a player does not have identity, the player container is deleted
immediately, which will cause a crash if the connections are established
afterwards.
FIXED-IN: 6.0.3

M  +0    -7    libkmpris/mpris2sourcemodel.cpp
M  +7    -0    libkmpris/playercontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/74e5f349edab7a9dcf5c868fa521293a95bc6c82
Comment 8 Fushan Wen 2024-03-17 16:03:43 UTC
Git commit de59f381d80e0c97564daa664215c186256482be by Fushan Wen.
Committed on 17/03/2024 at 15:50.
Pushed by fusionfuture into branch 'Plasma/6.0'.

libkmpris: check identity before emitting initialFetchFinished

When a player does not have identity, the player container is deleted
immediately, which will cause a crash if the connections are established
afterwards.
FIXED-IN: 6.0.3


(cherry picked from commit 74e5f349edab7a9dcf5c868fa521293a95bc6c82)

M  +0    -7    libkmpris/mpris2sourcemodel.cpp
M  +7    -0    libkmpris/playercontainer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/de59f381d80e0c97564daa664215c186256482be
Comment 9 Fushan Wen 2024-03-21 08:15:23 UTC
*** Bug 483878 has been marked as a duplicate of this bug. ***
Comment 10 Nicolas Fella 2024-03-21 16:06:21 UTC
*** Bug 484010 has been marked as a duplicate of this bug. ***