libkmpris: check identity before emitting initialFetchFinished

When a player does not have identity, the player container is deleted
immediately, which will cause a crash if the connections are established
afterwards.

BUG: 483818
FIXED-IN: 6.0.3